; ModuleID = '/home/carl/AnghaBench/redis/tests/modules/extr_hooks.c_cmdEventLast.c'
source_filename = "/home/carl/AnghaBench/redis/tests/modules/extr_hooks.c_cmdEventLast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

@REDISMODULE_OK = common dso_local global i32 0, align 4
@event_log = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cmdEventLast(i32* %0, i32** %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  %10 = icmp ne i32 %9, 2
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @RedisModule_WrongArity(i32* %12)
  %14 = load i32, i32* @REDISMODULE_OK, align 4
  store i32 %14, i32* %4, align 4
  br label %49

15:                                               ; preds = %3
  %16 = load i32, i32* @event_log, align 4
  %17 = load i32**, i32*** %6, align 8
  %18 = getelementptr inbounds i32*, i32** %17, i64 1
  %19 = load i32*, i32** %18, align 8
  %20 = call %struct.TYPE_3__* @RedisModule_DictGet(i32 %16, i32* %19, i32* null)
  store %struct.TYPE_3__* %20, %struct.TYPE_3__** %8, align 8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %22 = icmp ne %struct.TYPE_3__* %21, null
  br i1 %22, label %23, label %34

23:                                               ; preds = %15
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %34

28:                                               ; preds = %23
  %29 = load i32*, i32** %5, align 8
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 1
  %32 = load i64, i64* %31, align 8
  %33 = call i32 @RedisModule_ReplyWithString(i32* %29, i64 %32)
  br label %47

34:                                               ; preds = %23, %15
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %36 = icmp ne %struct.TYPE_3__* %35, null
  br i1 %36, label %37, label %43

37:                                               ; preds = %34
  %38 = load i32*, i32** %5, align 8
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = call i32 @RedisModule_ReplyWithLongLong(i32* %38, i32 %41)
  br label %46

43:                                               ; preds = %34
  %44 = load i32*, i32** %5, align 8
  %45 = call i32 @RedisModule_ReplyWithNull(i32* %44)
  br label %46

46:                                               ; preds = %43, %37
  br label %47

47:                                               ; preds = %46, %28
  %48 = load i32, i32* @REDISMODULE_OK, align 4
  store i32 %48, i32* %4, align 4
  br label %49

49:                                               ; preds = %47, %11
  %50 = load i32, i32* %4, align 4
  ret i32 %50
}

declare dso_local i32 @RedisModule_WrongArity(i32*) #1

declare dso_local %struct.TYPE_3__* @RedisModule_DictGet(i32, i32*, i32*) #1

declare dso_local i32 @RedisModule_ReplyWithString(i32*, i64) #1

declare dso_local i32 @RedisModule_ReplyWithLongLong(i32*, i32) #1

declare dso_local i32 @RedisModule_ReplyWithNull(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
